# metrohash-rs

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
src/: lib.rs  metrohash128.rs  metrohash64.rs  tests.rs  utils.rs
